# Terradyn

./: .gitignore  Makefile  README.md  link0_rotation_init.txt  main.cpp
drawstuff/: drawstuff.h
model/include/: Model.hpp  spd.h
model/matrix/: vector.hpp
model/model/: dora2_micro_phi00_modified.txt  dora2_micro_phi02.txt  dora2_micro_phi04.txt  dora2_micro_phi08.txt  dora2_micro_phi09.txt  dora2_micro_phi10.txt  dora2_micro_phi15_modified.txt  dora2_phi00_center_intertia.txt  dora2_phi05_center_intertia.txt  el_dorado2_phi05_center.txt  el_dorado2_phi15  el_dorado2_phi15_center.txt  el_dorado2_phi20
model/src/: drawModel.cpp  model_init.cpp  model_ode_result3.cpp
olddata/: 1data.txt  1data_fe.txt  1data_pos.txt  1data_pos_I.txt  2data_pos_I.txt  data.txt  data_fe.txt  data_pos.txt  data_pos_I.txt
slop_data_EX/: slope10A_800.xlsx  slope10B_800.xlsx  slope10_phi10A_800.xlsx
slope_data_yujiro/: slope10A_800data.txt  slope10A_800data_fe.txt  slope10A_800data_pos.txt  slope10A_800data_pos_I.txt
spd/: Makefile  _Makefile
spd/include/: Model.hpp  draw.h  (+2 more)
terra/: CMakeLists.txt  angle.hpp  terradyn.cpp  terradyn.h  terradyn.hpp  terradyn2.c  terradyn2.h  wheel_soil.cpp
terra/include/: terradyn.hpp  wheel_soil.hpp
terra/src/: terradyn.cpp  wheel_soil.cpp
terradyn/: .gitignore  CMakeLists.txt
terradyn/include/: Terradyn.hpp  angle.hpp  gsl.hpp  terradyn.h  terradyn.hpp  wheel_soil.hpp
terradyn/src/: Terradyn.cpp  angle.cpp  gsl.cpp  terradyn.c  terradyn.cpp  wheel_soil.cpp
terradyn/test/: main.cpp  test-gsl.cpp  test-terradyn.cpp  test-wheel_soil.cpp
(+47 files in other folders)
